# Messenger

./: .gitignore  README.md  pyproject.toml
project/: dump.rdb
project/chat/: consumers.py  middleware.py  models.py  routing.py  serializers.py  urls.py  urls_messages.py  views.py
project/chat/migrations/: 0001_initial.py
project/core/: asgi.py  urls.py  wsgi.py
project/core/settings/: base.py
project/users/: serializers.py  urls.py  views.py
